<?xml version="1.0"?>
<package format="2">
  <name>orb_slam_2</name>
  <version>0.0.0</version>
  <description>
    Custom version of orb slam 2.
  </description>
  <url></url>
  <author>Alex Millane</author>
  <author>Marco Tranzatto</author>
  <maintainer email="marcot@ethz.ch">Marco Tranzatto</maintainer>
  <license>New BSD</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <!-- Dependencies. -->
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>catkin_simple</depend>
  <depend>minkindr</depend>
  <depend>minkindr_conversions</depend>
  <depend>eigen_conversions</depend>

</package>
